--- a/.github/workflows/publish_lamp.yml
+++ b/.github/workflows/publish_lamp.yml
@@ -29,4 +29,4 @@ jobs:
           context: lamp/ubuntu/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: alexjunk/lamp:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/lamp:latest
