publishing on 2 tags

--- a/.github/workflows/emonhub_with_versions.yml
+++ b/.github/workflows/emonhub_with_versions.yml
@@ -52,4 +52,6 @@ jobs:
             "PYMODBUS_VERSION=${{ env.pymodbus }}"
             "PAHO_VERSION=${{ env.paho }}"
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/emonhub:${{ steps.tag.outputs.tag }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/emonhub:${{ steps.tag.outputs.tag }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/emonhub:latest
