--- a/.github/workflows/tf_with_versions.yml
+++ b/.github/workflows/tf_with_versions.yml
@@ -8,14 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ubuntu_version: 
-          - 22.04
-        tflite:
-          - 2.13.0
-        paho:
-          - 2.1.0
-        pymodbus:
-          - 3.6.8
+        ubuntu_version: [22.04]
+        tflite: [2.13.0]
+        paho: [1.6.1, 2.1.0]
+        pymodbus: [3.4.1, 3.6.8]
+        exclude:
+          - paho: 1.6.1
+            pymodbus: 3.6.8
+          - paho: 2.1.0
+            pymodbus: 3.4.1
     steps:
       -
         name: Checkout
