--- a/.github/workflows/bios_with_emoncms_version.yml
+++ b/.github/workflows/bios_with_emoncms_version.yml
@@ -1,4 +1,4 @@
-name: themis docker images to docker hub - mention emoncms version
+name: themis with emoncms version to docker hub - 
 
 on:
   workflow_dispatch:
