--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        alpine_version: [3.19, 3.20]
+        alpine_version: ['3.19', '3.20']
     steps:
       -
         name: Checkout
