--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get -y update;\
     python3 -m pip install --no-cache-dir click requests;\
     python3 -m pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
     python3 -m pip install --no-cache-dir PyFina;\
+    python3 -m pip install --no-cache-dir aiohttp;\
     apt-get purge -y --auto-remove python3-pip;\
     apt-get clean
 
