--- a/.github/workflows/bios_with_emoncms_version.yml
+++ b/.github/workflows/bios_with_emoncms_version.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         include:
-        - alpine_version: 3.19
+        - alpine_version: '3.19'
           php_version: 82
-        - alpine_version: 3.18
-          php_version: 81
+        - alpine_version: '3.20'
+          php_version: 82
     steps:
       -
         name: Checkout
