Fix numpy to  1.26.4 so tflite can run

--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -5,6 +5,7 @@ FROM $BUILD_FROM
 ARG \
     PYMODBUS_VERSION=3.4.1 \
     PAHO_VERSION=1.6.1 \
+    NUMPY_VERSION=1.26.4 \
     TFLITE_VERSION=2.13.0
 
 RUN apt-get -y update;\
@@ -17,6 +18,7 @@ RUN apt-get -y update;\
     python3 -m pip install --no-cache-dir paho-mqtt==$PAHO_VERSION;\
     python3 -m pip install --no-cache-dir mysql-connector-python redis;\
     python3 -m pip install --no-cache-dir click requests;\
+    python3 -m pip install --no-cache-dir numpy==$NUMPY_VERSION;\
     python3 -m pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
     python3 -m pip install --no-cache-dir PyFina;\
     python3 -m pip install --no-cache-dir aiohttp;\
