--- a/.github/workflows/tf_with_versions.yml
+++ b/.github/workflows/tf_with_versions.yml
@@ -10,6 +10,7 @@ jobs:
       matrix:
         ubuntu_version: [22.04]
         tflite: [2.13.0]
+        numpy: [1.26.4]
         paho: [1.6.1, 2.1.0]
         pymodbus: [3.4.1, 3.6.8]
         exclude:
@@ -34,6 +35,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        id: tag
+        name: create tag
+        run: |
+          t0=ubuntu${{ matrix.ubuntu_version }}
+          t1=_numpy${{ matrix.numpy }}
+          t2=_tflite${{ matrix.tflite }}
+          t3=_paho${{ matrix.paho }}
+          t4=_pymodbus${{ matrix.pymodbus}}
+          echo $t0
+          echo $t1
+          echo "tag=$t0$t1$t2$t3$t4" >> "$GITHUB_OUTPUT"
+      -
         name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -43,6 +56,7 @@ jobs:
             "BUILD_FROM=ubuntu:${{ matrix.ubuntu_version }}"
             "PYMODBUS_VERSION=${{ matrix.pymodbus}}"
             "PAHO_VERSION=${{ matrix.paho }}"
+            "NUMPY_VERSION=${{ matrix.numpy }}"
             "TFLITE_VERSION=${{ matrix.tflite }}"
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tf:ubuntu${{ matrix.ubuntu_version }}_tflite${{ matrix.tflite }}_paho${{ matrix.paho }}_pymodbus${{ matrix.pymodbus}}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tf:${{ steps.tag.outputs.tag }}
