--- a/.github/workflows/tf_with_versions.yml
+++ b/.github/workflows/tf_with_versions.yml
@@ -9,6 +9,8 @@ jobs:
     strategy:
       matrix:
         ubuntu_version: [22.04]
+        context: ["tf", "tf_armv7"]
+        platform: ["linux/amd64", "linux/arm64", "linux/arm/v7"]
         tflite: [2.13.0]
         numpy: [1.26.4]
         paho: [1.6.1, 2.1.0]
@@ -18,6 +20,16 @@ jobs:
             pymodbus: 3.6.8
           - paho: 2.1.0
             pymodbus: 3.4.1
+          - platform: "tf"
+            context: "linux/arm64"
+          - platform: "tf"
+            context: "linux/amd64"
+          - platform: "tf"
+            context: "linux/arm/v7"
+          - platform: "tf_armv7"
+            context: "linux/arm64"
+          - platform: "tf_armv7"
+            context: "linux/amd64"
     steps:
       -
         name: Checkout
@@ -50,8 +62,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: tf/.
-          platforms: linux/amd64,linux/arm64
+          context: ${{ context }}/.
+          platforms: ${{ platform }}
           build-args: |
             "BUILD_FROM=ubuntu:${{ matrix.ubuntu_version }}"
             "PYMODBUS_VERSION=${{ matrix.pymodbus}}"
@@ -59,4 +71,4 @@ jobs:
             "NUMPY_VERSION=${{ matrix.numpy }}"
             "TFLITE_VERSION=${{ matrix.tflite }}"
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tf:${{ steps.tag.outputs.tag }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/{{ context }}:${{ steps.tag.outputs.tag }}
