--- a/.github/workflows/tf_with_versions.yml
+++ b/.github/workflows/tf_with_versions.yml
@@ -1,4 +1,4 @@
-name: tflite multiarch build with versions
+name: tflite amd/arm64 build with versions
 
 on:
   workflow_dispatch:
@@ -9,19 +9,11 @@ jobs:
     strategy:
       matrix:
         ubuntu_version: [22.04]
-        folder: ["tf", "tf_armv7"]
-        platform: ["linux/amd64", "linux/arm64", "linux/arm/v7"]
         tflite: [2.13.0]
         numpy: [1.26.4]
         paho: [1.6.1, 2.1.0]
         pymodbus: [3.4.1, 3.6.8]
         exclude:
-          - folder: "tf"
-            platform: "linux/arm/v7"
-          - folder: "tf_armv7"
-            platform: "linux/arm64"
-          - folder: "tf_armv7"
-            platform: "linux/amd64"
           - paho: 1.6.1
             pymodbus: 3.6.8
           - paho: 2.1.0
@@ -58,8 +50,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ${{ matrix.folder }}/.
-          platforms: ${{ matrix.platform }}
+          context: tf/.
+          platforms: linux/amd64,linux/arm64
           build-args: |
             "BUILD_FROM=ubuntu:${{ matrix.ubuntu_version }}"
             "PYMODBUS_VERSION=${{ matrix.pymodbus}}"
