--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -1,10 +1,10 @@
 name: ci_basic_distrib
 
 on:
-  push:
+  workflow_dispatch:
 
 env:
-  REGISTRY_IMAGE: alexjunk/basic
+  REGISTRY_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/basic
 
 jobs:
   build:
@@ -17,6 +17,12 @@ jobs:
           - linux/arm/v6
           - linux/arm/v7
           - linux/arm64
+        pymodbus: [3.4.1, 3.6.8]
+        exclude:
+          - paho: 1.6.1
+            pymodbus: 3.6.8
+          - paho: 2.1.0
+            pymodbus: 3.4.1
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,6 +36,13 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
+      -
+        id: tag
+        name: create tag
+        run: |
+          t0=_paho${{ matrix.paho }}
+          t1=_pymodbus${{ matrix.pymodbus}}
+          echo "tag=$t0$t1" >> "$GITHUB_OUTPUT"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -50,6 +63,7 @@ jobs:
           context: basic/.
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/basic:${{ steps.tag.outputs.tag }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
