--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -17,6 +17,7 @@ jobs:
           - linux/arm/v6
           - linux/arm/v7
           - linux/arm64
+        paho: [1.6.1, 2.1.0]
         pymodbus: [3.4.1, 3.6.8]
         exclude:
           - paho: 1.6.1
