--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -30,13 +30,8 @@ jobs:
       - name: Prepare
         run: |
           platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV          
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV         
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
       -
         id: tag
         name: create tag
@@ -44,6 +39,14 @@ jobs:
           t0=paho${{ matrix.paho }}
           t1=_pymodbus${{ matrix.pymodbus}}
           echo "tag=$t0$t1" >> "$GITHUB_OUTPUT"
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+          tags: |
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ steps.tag.output.tag }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -64,7 +67,6 @@ jobs:
           context: basic/.
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/basic:${{ steps.tag.outputs.tag }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
