--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ steps.tag.output.tag }}
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ steps.tag.outputs.tag }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -78,7 +78,7 @@ jobs:
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ env.PLATFORM_PAIR }}
+          name: digests-${{ env.PLATFORM_PAIR }}${{ steps.tag.outputs.tag }}
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
