--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -5,6 +5,9 @@ on:
 
 env:
   REGISTRY_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/basic
+  paho: 2.1.0
+  pymodbus: 3.6.8
+  tag: ${{ env.paho }}_${{ env.pymodbus }}
 
 jobs:
   build:
@@ -17,13 +20,7 @@ jobs:
           - linux/arm/v6
           - linux/arm/v7
           - linux/arm64
-        paho: [1.6.1, 2.1.0]
-        pymodbus: [3.4.1, 3.6.8]
-        exclude:
-          - paho: 1.6.1
-            pymodbus: 3.6.8
-          - paho: 2.1.0
-            pymodbus: 3.4.1
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,21 +29,13 @@ jobs:
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV         
 
-      -
-        id: tag
-        name: create tag
-        run: |
-          t0=paho${{ matrix.paho }}
-          t1=_pymodbus${{ matrix.pymodbus}}
-          echo "tag=$t0$t1" >> "$GITHUB_OUTPUT"
-
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ steps.tag.outputs.tag }}
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ env.tag }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -78,7 +67,7 @@ jobs:
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ env.PLATFORM_PAIR }}${{ steps.tag.outputs.tag }}
+          name: digests-${{ env.PLATFORM_PAIR }}${{ env.tag }}
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
@@ -110,7 +99,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY_IMAGE }}
           tags: |
-            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ steps.tag.outputs.tag }}
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ env.tag }}
 
       - name: Create manifest list and push
         working-directory: /tmp/digests
