--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -85,6 +85,11 @@ jobs:
           path: /tmp/digests
           pattern: digests-*
           merge-multiple: true
+      - name: tag
+        run: |
+          t0=paho${{ env.paho }}
+          t1=_pymodbus${{ env.pymodbus }} 
+          echo "tag=$t0$t1" >> "$GITHUB_ENV"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
