--- a/.github/workflows/basic_distrib.yml
+++ b/.github/workflows/basic_distrib.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: production_dep
     strategy:
       fail-fast: false
       matrix:
@@ -25,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Prepare
         run: |
+          echo ${{ vars.PYMODBUS }}
           platform=${{ matrix.platform }}
           t0=paho${{ env.paho }}
           t1=_pymodbus${{ env.pymodbus }}
