--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -2,10 +2,17 @@ ARG BUILD_FROM=alpine:3.16
 
 FROM $BUILD_FROM
 
-ENV TZ="Europe/Paris"
+ARG \
+	PYFINA_VERSION=0.0.6 \
+	ENV_DIR=/ve
 
 RUN apk update && apk upgrade;\
-	apk add --no-cache tzdata python3 py3-pip py3-numpy;\
-	pip3 install --no-cache-dir flask docker --break-system-packages;\
-	pip3 install --no-cache-dir PyFina --break-system-packages;\
-	pip3 install --no-cache-dir mysql-connector-python redis --break-system-packages
+	apk add --no-cache tzdata python3 py3-pip py3-virtualenv py3-numpy;\
+	python3 -m venv $ENV_DIR;\
+	$ENV_DIR/bin/pip install --no-cache-dir flask docker;\
+	$ENV_DIR/bin/pip install --no-cache-dir PyFina=$PYFINA_VERSION;\
+	$ENV_DIR/bin/pip install --no-cache-dir mysql-connector-python redis
+
+ENV \
+	PATH="${ENV_DIR}/bin:$PATH" \
+	TZ="Europe/Paris"
