--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -2,13 +2,21 @@ name: bios admin UI multi arch build
 
 on:
   workflow_dispatch:
+    inputs:
+      alpine_version:
+        description: 'alpine version'
+        required: true
+        type: string
+        default: '3.20'
+      pyfina:
+        description: 'pyfina version'
+        required: true
+        type: string
+        default: '0.0.6'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        alpine_version: ['3.19', '3.20']
     steps:
       -
         name: Checkout
@@ -39,6 +47,7 @@ jobs:
           context: admin/.
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           build-args: |
-            "BUILD_FROM=alpine:${{ matrix.alpine_version }}"
+            "BUILD_FROM=alpine:${{ inputs.alpine_version }}"
+            "PYFINA_VERSION=${{ inputs.pyfina }}"
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/admin:${{ matrix.alpine_version }}_${{ steps.get_date.outputs.today }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/admin:${{ inputs.alpine_version }}_${{ steps.get_date.outputs.today }}
