--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -10,7 +10,7 @@ RUN apk update && apk upgrade;\
 	apk add --no-cache tzdata python3 py3-pip py3-virtualenv py3-numpy;\
 	python3 -m venv $ENV_DIR;\
 	$ENV_DIR/bin/pip install --no-cache-dir flask docker;\
-	$ENV_DIR/bin/pip install --no-cache-dir PyFina=$PYFINA_VERSION;\
+	$ENV_DIR/bin/pip install --no-cache-dir PyFina==$PYFINA_VERSION;\
 	$ENV_DIR/bin/pip install --no-cache-dir mysql-connector-python redis
 
 ENV \
