--- a/.github/workflows/bios_latest.yml
+++ b/.github/workflows/bios_latest.yml
@@ -2,6 +2,17 @@ name: themis latest tag
 
 on:
   workflow_dispatch:
+    inputs:
+      alpine_version:
+        description: 'alpine version'
+        required: true
+        type: string
+        default: '3.20'
+      php_version:
+        description: 'php version'
+        required: true
+        type: string
+        default: '83'
 
 jobs:
   docker:
@@ -9,8 +20,6 @@ jobs:
     env:
       emoncms_src: alexandrecuer/emoncms
       branch: bios_master
-      alpine_version: 3.19
-      php_version: 82
     steps:
       -
         name: Checkout
@@ -36,8 +45,8 @@ jobs:
           build-args: |
             "EMONCMS_SRC=https://github.com/${{ env.emoncms_src }}"
             "BRANCH=${{ env.branch }}"
-            "BUILD_FROM=alpine:${{ env.alpine_version }}"
-            "PHP_VER=${{ env.php_version }}"
-            "PHP_CONF=/etc/php${{ env.php_version }}/conf.d"
+            "BUILD_FROM=alpine:${{ inputs.alpine_version }}"
+            "PHP_VER=${{ inputs.php_version }}"
+            "PHP_CONF=/etc/php${{ inputs.php_version }}/conf.d"
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/themis:latest
