--- a/.github/workflows/emonhub_with_versions.yml
+++ b/.github/workflows/emonhub_with_versions.yml
@@ -2,21 +2,22 @@ name: emonhub with version
 
 on:
   workflow_dispatch:
-    alpine:
-      description: 'alpine version'
-      required: true
-      type: string
-      default: '3.20'
-    paho:
-      description: 'paho mqtt version'
-      required: true
-      type: string
-      default: '1.6.1'
-    pymodbus:
-      description: 'pymodbus version'
-      required: true
-      type: string
-      default: '3.6.8'
+    inputs:
+      alpine:
+        description: 'alpine version'
+        required: true
+        type: string
+        default: '3.20'
+      paho:
+        description: 'paho mqtt version'
+        required: true
+        type: string
+        default: '1.6.1'
+      pymodbus:
+        description: 'pymodbus version'
+        required: true
+        type: string
+        default: '3.6.8'
 
 jobs:
   docker:
