--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -11,7 +11,8 @@ RUN apk update && apk upgrade;\
 	python3 -m venv $ENV_DIR;\
 	$ENV_DIR/bin/pip install --no-cache-dir flask docker;\
 	$ENV_DIR/bin/pip install --no-cache-dir PyFina==$PYFINA_VERSION;\
-	$ENV_DIR/bin/pip install --no-cache-dir mysql-connector-python redis
+	$ENV_DIR/bin/pip install --no-cache-dir mysql-connector-python redis;\
+	$ENV_DIR/bin/pip install --no-cache-dir pyyaml
 
 ENV \
 	PATH="${ENV_DIR}/bin:$PATH" \
