--- a/tf_armv7/Dockerfile
+++ b/tf_armv7/Dockerfile
@@ -7,7 +7,8 @@ ARG \
     PAHO_VERSION=1.6.1 \
     NUMPY_VERSION=1.26.4 \
     TFLITE_VERSION=2.13.0 \
-    PYFINA_VERSION=0.0.6
+    PYFINA_VERSION=0.0.6 \
+    ENV_DIR=/ve
 
 RUN apt-get -y update;\
     apt-get -y upgrade;\
@@ -15,15 +16,19 @@ RUN apt-get -y update;\
     apt-get install -y wget curl nano;\
     apt-get -y install python3 python3-pip;\
     apt-get -y install swig libjpeg-dev zlib1g-dev python3-dev python-is-python3 unzip git cmake make;\
-    python3 -m pip install --no-cache-dir pip --upgrade;\
-    python3 -m pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
-    python3 -m pip install --no-cache-dir paho-mqtt==$PAHO_VERSION;\
-    python3 -m pip install --no-cache-dir mysql-connector-python redis;\
-    python3 -m pip install --no-cache-dir click requests;\
-    python3 -m pip install --no-cache-dir numpy==$NUMPY_VERSION;\
-    python3 -m pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
-    python3 -m pip install --no-cache-dir PyFina==$PYFINA_VERSION;\
-    python3 -m pip install --no-cache-dir aiohttp;\
-    apt-get purge -y --auto-remove python3-pip;\
+    python3 -m venv $ENV_DIR;\
+    $ENV_DIR/bin/pip install --no-cache-dir pip --upgrade;\
+    $ENV_DIR/bin/pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
+    $ENV_DIR/bin/pip install --no-cache-dir paho-mqtt==$PAHO_VERSION;\
+    $ENV_DIR/bin/pip install --no-cache-dir mysql-connector-python redis;\
+    $ENV_DIR/bin/pip install --no-cache-dir click requests;\
+    $ENV_DIR/bin/pip install --no-cache-dir numpy==$NUMPY_VERSION;\
+    $ENV_DIR/bin/pip install --no-cache-dir tflite-runtime==$TFLITE_VERSION;\
+    $ENV_DIR/bin/pip install --no-cache-dir PyFina==$PYFINA_VERSION;\
+    $ENV_DIR/bin/pip install --no-cache-dir aiohttp;\
     apt-get purge -y --auto-remove swig libjpeg-dev zlib1g-dev python3-dev python-is-python3 unzip git cmake make;\
     apt-get clean
+
+ENV \
+    PATH="${ENV_DIR}/bin:$PATH" \
+    TZ="Europe/Paris"
