--- a/tf/Dockerfile
+++ b/tf/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get -y update;\
     apt-get -y upgrade;\
     apt-get install -y tzdata;\
     apt-get install -y wget curl nano;\
-    apt-get -y install python3 python3-pip python3-dev;\
+    apt-get -y install python3 python3-pip python3-venv python3-dev;\
     python3 -m venv $ENV_DIR;\
     $ENV_DIR/bin/pip install --no-cache-dir pip --upgrade;\
     $ENV_DIR/bin/pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
