--- a/tf_armv7/Dockerfile
+++ b/tf_armv7/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get -y update;\
     apt-get install -y tzdata;\
     apt-get install -y wget curl nano;\
     apt-get -y install python3 python3-pip;\
-    apt-get -y install swig libjpeg-dev zlib1g-dev python3-dev python-is-python3 unzip git cmake make;\
+    apt-get -y install swig libjpeg-dev zlib1g-dev python3-dev python3-venv python-is-python3 unzip git cmake make;\
     python3 -m venv $ENV_DIR;\
     $ENV_DIR/bin/pip install --no-cache-dir pip --upgrade;\
     $ENV_DIR/bin/pip install --no-cache-dir pyserial pymodbus==$PYMODBUS_VERSION;\
